fixed the problem with recorsive file fuc. corpus still needs work on updateRAFs and populate, resultToString from word result needs to be written.